erDiagram
    %% ============================================================
    %% USERS & AUTHENTICATION MODULE
    %% ============================================================
    
    users ||--o| mitra_profiles : "has"
    users ||--o| receipt_profiles : "has"
    %% users ||--o{ chat_conversations : "creates"
    %% users ||--o{ notifications : "receives"
    %% users ||--o{ audit_logs : "performs"
    
    users {
        uuid id PK
        varchar email UK
        varchar phone UK
        varchar password_hash
        enum role "mitra|penerima|admin"
        varchar code_verification
        timestamp code_expired_at
        boolean email_verified
        timestamp created_at
        timestamp updated_at
        timestamp last_login_at
    }
    
    mitra_profiles {
        uuid id PK
        uuid user_id FK,UK
        varchar business_name
        varchar business_type
        varchar owner_name
        varchar business_registration_number
        varchar pickup_instructions
        text address
        varchar city
        varchar province
        jsonb operational_hours
        varchar business_registration_doc
        varchar owner_id_card_doc
        varchar business_photo_url
        int total_portions_sells
        decimal rating_avg
        int rating_count
        timestamp created_at
        timestamp updated_at
    }

    review_mitra {
        uuid id
        uuid user_id FK
        uuid mitra_id FK
        decimal rating
        text description
        varchar image_url
        timestamp created_at
        timestamp updated_at
    }
    
    receipt_profiles {
        uuid id PK
        uuid user_id FK,UK
        varchar full_name
        date date_of_birth
        varchar occupation
        text address
        varchar city
        varchar province
        varchar photo_url
        timestamp created_at
        timestamp updated_at
    }
    
    %% ============================================================
    %% POS MODULE
    %% ============================================================
    
    mitra_profiles ||--o{ surplus_listings : "owns"
    mitra_profiles ||--o{ transactions : "sells"
    
    categories ||--o{ surplus_listings : "categorizes"
    
    surplus_listings ||--o{ transaction_items : "sold_in"
    
    transactions ||--|{ transaction_items : "contains"
    
    categories {
        uuid id PK
        varchar name
        timestamp created_at
        timestamp updated_at
    }
    
    surplus_listings {
        uuid id PK
        uuid mitra_id FK
        uuid category_id FK
        varchar name
        text description
        varchar image_url
        int original_price
        int discounted_price
        int discount_percentage
        int portions_sold
        int portions_available
        enum food_condition "excellent|good|fair"
        enum status "available|sold_out|expired"
        datetime prepared_at
        datetime expires_at
        timestamp created_at
        timestamp updated_at
    }
    
    transactions {
        uuid id PK
        uuid mitra_id FK
        uuid receipt_id FK
        varchar transaction_number UK
        int subtotal
        int total_amount
        int payment_amount
        enum payment_status "pending|paid|expired"
        timestamp payment_deadline %%15 menit setelah transaksi dibuat
        enum status "confirmed|completed|cancelled"
        varchar payment_reference
        text notes
        date pickup_date
        varchar qr_code UK
        boolean qr_code_scanned
        timestamp qr_scanned_at
        time pickup_time_start 
        time pickup_time_end
        timestamp created_at
        timestamp updated_at
        timestamp completed_at
    }
    
    transaction_items {
        uuid id PK
        uuid transaction_id FK
        uuid surplus_listing_id FK
        int quantity
        int subtotal
        text notes
        timestamp created_at
    }
    
    %% ============================================================
    %% SURPLUS DONATION MODULE
    %% ============================================================
    
    mitra_profiles ||--o{ surplus_listings : "donates"
    
    surplus_listings ||--o{ matching_logs : "matched_with"
    
    categories ||--o{ surplus_listings :  "categorizes"
    
    
    
    %% ============================================================
    %% AI & ANALYTICS MODULE
    %% ============================================================
    
    %% chat_conversations ||--|{ chat_messages : "contains"
    
    %% users ||--o{ chat_conversations :  "initiates"
    %% mitra_profiles ||--o{ chat_conversations : "context_for"
    
    %% mitra_profiles ||--o{ ai_suggestions : "receives"
    %% products ||--o{ ai_suggestions :  "suggested_for"
    
    %% chat_conversations {
    %%     uuid id PK
    %%     uuid user_id FK
    %%     enum chat_type "umkm_assistant|penerima_support|general"
    %%     uuid mitra_id FK
    %%     jsonb context_data
    %%     varchar title
    %%     boolean is_active
    %%     timestamp created_at
    %%     timestamp updated_at
    %%     timestamp closed_at
    %% }
    
    %% chat_messages {
    %%     uuid id PK
    %%     uuid conversation_id FK
    %%     enum role "user|assistant|system"
    %%     text content
    %%     varchar model_used
    %%     int tokens_used
    %%     int processing_time_ms
    %%     decimal confidence_score
    %%     jsonb context_sources
    %%     timestamp created_at
    %% }
    
    %% ai_suggestions {
    %%     uuid id PK
    %%     uuid mitra_id FK
    %%     enum suggestion_type "surplus_item|price_adjustment|stock_alert|trend_insight"
    %%     varchar title
    %%     text description
    %%     jsonb suggested_action
    %%     uuid product_id FK
    %%     varchar urgency "low|medium|high|critical"
    %%     decimal confidence_score
    %%     text reasoning
    %%     enum status "pending|accepted|rejected|expired"
    %%     timestamp responded_at
    %%     text response_notes
    %%     timestamp created_at
    %%     timestamp expires_at
    %% }
    
    %% matching_logs {
    %%     uuid id PK
    %%     uuid surplus_listing_id FK
    %%     varchar algorithm_version
    %%     varchar matching_strategy
    %%     int total_penerima_evaluated
    %%     jsonb ranking_results
    %%     int processing_time_ms
    %%     timestamp created_at
    %% }
    
    %% ============================================================
    %% NOTIFICATIONS
    %% ============================================================
    
    %% users ||--o{ notifications : "receives"
    
    %% notifications {
    %%     uuid id PK
    %%     uuid user_id FK
    %%     enum notification_type "claim_approved|claim_rejected|pickup_reminder|new_surplus_available|surplus_claimed|rating_received|verification_approved|verification_rejected|stock_low|ai_suggestion"
    %%     varchar title
    %%     text message
    %%     varchar action_url
    %%     varchar action_label
    %%     varchar related_entity_type
    %%     uuid related_entity_id
    %%     boolean is_read
    %%     timestamp read_at
    %%     boolean sent_via_email
    %%     boolean sent_via_push
    %%     boolean sent_via_whatsapp
    %%     timestamp created_at
    %%     timestamp expires_at
    %% }
    
    %% ============================================================
    %% SYSTEM TABLES
    %% ============================================================
    
    %% users ||--o{ audit_logs : "logged_by"
    
    %% audit_logs {
    %%     uuid id PK
    %%     uuid user_id FK
    %%     varchar action "create|update|delete|login|logout"
    %%     varchar entity_type
    %%     uuid entity_id
    %%     jsonb old_values
    %%     jsonb new_values
    %%     inet ip_address
    %%     text user_agent
    %%     timestamp created_at
    %% }
    
    %% system_settings {
    %%     varchar key PK
    %%     text value
    %%     text description
    %%     varchar data_type "string|number|boolean|json"
    %%     boolean is_public
    %%     uuid updated_by FK
    %%     timestamp updated_at
    %% }
